# hass-web-proxy-integration

./: .gitignore  .ruff.toml  README.md  hacs.json  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  release-drafter.yml
custom_components/hass_proxy/: __init__.py  config_flow.py  const.py  data.py  manifest.json  proxy.py  proxy_lib.py  services.yaml
custom_components/hass_proxy/translations/: en.json
custom_components/hass_web_proxy/: __init__.py  config_flow.py  const.py  data.py  manifest.json  proxy.py  proxy_lib.py  services.yaml
tests/: __init__.py  conftest.py  test_config_flow.py  test_init.py  test_proxy.py  test_proxy_lib.py  utils.py
