[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = [
    "tests",
]
norecursedirs = [
    ".git",
    "testing_config",
]
addopts = "--timeout=10 --cov-report=xml:coverage.xml --cov-report=term-missing --cov=custom_components.hass_web_proxy --cov-fail-under=100"

[tool.coverage.report]
exclude_also = [
    "raise NotImplementedError",
    "if TYPE_CHECKING:"
]

[tool.poetry]
package-mode = false

[tool.poetry.dependencies]
python = ">=3.12,<3.14"
homeassistant = ">=2024.10.3"
hass-web-proxy-lib = ">=0.0.6"
urlmatch = "^1.0.1"

[tool.poetry.group.dev.dependencies]
pip = ">=21.3.1"
pytest = ">=8.3.3"
pytest-homeassistant-custom-component = ">=0.13.174"
ruff = ">=0.7.0"
poetry = ">=1.8.4"
mypy = ">=1.13"

[tool.mypy]
# Stock HomeAssistant mypy configuration.
ignore_missing_imports = true
python_version = "3.12"
follow_imports = "silent"
strict_equality = true
warn_incomplete_stub = true
warn_redundant_casts = true
warn_unused_configs = true
warn_unused_ignores = true
check_untyped_defs = true
disallow_incomplete_defs = true
disallow_subclassing_any = true
disallow_untyped_calls = true
disallow_untyped_decorators = true
disallow_untyped_defs = true
no_implicit_optional = true
warn_return_any = true
warn_unreachable = true
show_error_codes = true
